# ComfyUI-Video-Editing-X-Attention

./: README.md  X-Att-Video-Editor.ipynb  nodes.py  ptp_utils.py  pyproject.toml  requirements.txt  train.py  wf_basic.json
configs/: config_single_image.yaml
models/model_scope_diffusers/: README.md
models/model_scope_diffusers/scheduler/: scheduler_config.json
models/zeroscope_v2_576w/scheduler/: scheduler_config.json
utils/: guidance_functions.py  lama.py  lora_handler.py
weights/: README.md  configuration.json
